--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -14,7 +14,7 @@ header {
         height: 80px;
         cursor: pointer;
         transition: all 0.5s ease-in-out;
-        overflow: hidden;
+        overflow-x: hidden;
 
         @include mobile {
             top: 1%;
